<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">qdeq</string>
    <string name="build_type">Release</string>

    <!-- Player -->
    <string name="player_no_track_loaded">…kein track geladen…</string>
    <string name="player_loading">lade…</string>

    <!-- Queue -->
    <string name="queue_title">queue</string>

    <string name="queue_dialog_confirm_clear_title">Queue löschen</string>
    <string name="queue_dialog_confirm_clear_message">Die Queue wirklich löschen?</string>
    <string name="queue_dialog_save_tracks_as_playlist_title">Queue als Playlist speichern</string>
    <string name="queue_dialog_save_tracks_as_playlist_message">Lege eine neue Playlist an, oder füge die Tracks zu einer vorhandenen hinzu</string>
    <string name="queue_dialog_add_tracks_to_playlist_title">Vorhandene Playlists</string>
    <string name="queue_dialog_add_tracks_to_playlist_edittext_hint">Name für Playlist eingeben</string>
    <string name="queue_dialog_add_tracks_to_existing_playlist_title">In vorhandener Playlist speichern</string>
    <string name="queue_dialog_add_tracks_to_existing_playlist_message">Tracks ans Ende anhängen oder Playlist überschreiben?</string>
    <string name="queue_dialog_add_tracks_to_existing_playlist_append">Anhängen</string>
    <string name="queue_dialog_add_tracks_to_existing_playlist_overwrite">Überschreiben</string>

    <string name="queue_toast_save_tracks_as_queue_need_name">Bitte einen Namen für die Playlist eingeben</string>
    <string name="queue_toast_add_to_existing_playlist_problem">Es gab ein problem</string>

    <!-- Playlists -->
    <string name="playlists_title">playlists</string>

    <!-- Filebrowser -->
    <string name="filebrowser_title">filebrowser</string>

    <string name="filebrowser_dialog_add_tracks_to_queue_title">Diese Tracks in die Queue laden?</string>
    <string name="filebrowser_dialog_queue_overwrite">Queue überschreiben</string>

    <string name="filebrowser_toast_empty_directory">Dieses Verzeichnis enthält keine unterstützten Audiotracks</string>

    <!-- Dialogs -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Abbrechen</string>

    <string name="dialog_add_to_queue">In die Queue laden</string>
    <string name="dialog_add_to_playlist">In die Playlist</string>
    <string name="dialog_play">Sofort abspiele</string>

    <string name="add_m3ulist_to_queue_dialog_tracks_found_title">%1$s  in der Queue öffnen</string>
    <string name="add_m3ulist_to_queue_dialog_no_tracks_found_title">%1$s kann nicht geöffnet werden</string>
    <string name="add_m3ulist_to_queue_tracks_found_title">Folgende Tracks wurden gefunden:</string>
    <string name="add_m3ulist_to_queue_tracks_not_found_title">Folgende Tracks wurden nicht gefunden:</string>

    <string name="storage_permission_request_message">Um Tracks von der SD Karte abspielen zu können benötigt die App Zugriffsberechtung</string>

    <string name="dialog_crashlytics_opt_in_title">Fehlerberichte aktivieren?</string>
    <string name="dialog_crashlytics_opt_in_message">Zur ständigen Verbesserung der App sind Fehlerberichte von Abstürzen sehr hilfreich. Die Fehlerberichte werden anonymisiert verschickt (siehe Datenschutz).\nDu kannst das Versenden der Fehlerberichte in den Einstellungen jederzeit ausschalten.</string>
    <string name="dialog_crashlytics_opt_in_go_to_settings">Direkt zu Einstellungen</string>
    <string name="dialog_crashlytics_opt_in_no_thanks">Nein Danke</string>

    <!-- Snackbar -->
    <string name="snackbar_title_removed">%1$s wurde gelöscht</string>
    <string name="snackbar_undo">Rückgänging</string>

    <!-- More Menu and Settings -->
    <string name="more_menu_settings">Einstellungen</string>
    <string name="more_menu_imprint">Impressum</string>
    <string name="more_menu_privacy">Datenschutzerklärung</string>
    <string name="more_menu_contact">Feedback</string>
    <string name="more_menu_licenses">Lizenzen</string>

    <!-- Prefs Keys -->
    <string name="prefs_key_track_autostart" translatable="false">PREFS_TRACK_AUTOSTART</string>
    <string name="prefs_key_proceed_to_next_track" translatable="false">PREFS_PROCEED_TO_NEXT_TRACK</string>
    <string name="prefs_key_skip_back_to_start" translatable="false">PREFS_SKIP_BACK_TO_START</string>
    <string name="prefs_key_show_clear_queue_dialog" translatable="false">PREFS_SHOW_CLEAR_QUEUE_DIALOG</string>
    <string name="prefs_key_stop_playback_on_cue" translatable="false">PREFS_STOP_PLAYBACK_ON_CUE</string>
    <string name="prefs_key_enable_remain_blink" translatable="false">PREFS_ENABLE_REMAIN_BLINK</string>
    <string name="prefs_key_enable_crashreporting" translatable="false">PREFS_ENABLE_CRASHREPORTING</string>
    <string name="prefs_key_app_version" translatable="false">PREFS_APP_VERSION</string>
    <string name="prefs_key_device_info" translatable="false">PREFS_DEVICE_INFO</string>
    <string name="prefs_key_jogwheel_sensitivity" translatable="false">PREFS_JOG_WHEEL_SENSITIVITY</string>
    <string name="prefs_key_start_foreground" translatable="false">PREFS_START_FOREGROUND</string>
    <string name="prefs_key_equalizer" translatable="false">PREFS_EQUALIZER</string>

    <!-- Basic Playback Settings -->
    <string name="settings_cat_player_basic_title">Einstellungen für Wiedergabe</string>

    <string name="settings_track_autostart_title">Track autoplay</string>
    <string name="settings_track_autostart_summary">Wenn aktiviert wird ein Track nach Auswahl in der Queue oder nach Skip sofort abgespielt.</string>

    <string name="settings_proceed_to_next_track_title">Automatisch zum nächsten Track</string>
    <string name="settings_proceed_to_next_track_summary">Wenn aktiviert wird nach Trackende automatisch der nächste Track geladen.</string>

    <string name="settings_skip_back_behaviour_title">Skip-Back Verhalten</string>
    <string name="settings_skip_back_behaviour_summary">Wenn aktiviert führt Skip-Back zum Anfang des Tracks und stoppt dort auf jeden Fall.\nWenn deaktiviert wird zum vorherigen Track gesprungen.\nBeachte, dass diese Einstellung auch im Shuffle Mode aktiv ist.</string>

    <string name="settings_show_clear_queue_title">Warndialog für Clear-Queue zeigen</string>
    <string name="settings_show_clear_queue_summary">Wenn aktiviert wird vor dem Löschen der Queue ein Warndialog angezeigt</string>

    <!-- DJ Specific Settings -->
    <string name="settings_cat_dj_specific_options_title">Einstellungen für DJ Features</string>

    <string name="settings_dj_enable_cue">Cue-Punkt setzen</string>
    <string name="settings_dj_enable_cue_summary">Aktivieren um einen Cue-Punkt setzen zu können (Tap auf CUE aktiviert, Long-Tap löscht den Cue-Punkt).</string>

    <string name="settings_dj_stop_playback_on_cue_title">Wiedergabe stoppen beim Cue-Punkt setzen</string>
    <string name="settings_dj_stop_playback_on_cue_summary">Wenn aktiviert stoppt die Wiedergabe beim Setzen eines Cue-Punktes</string>

    <string name="settings_dj_enable_remain_blink_title">Zeitanzeige für \"remain\" blinkt</string>
    <string name="settings_dj_remain_blink_summary">Wenn aktiviert blinkt die Zeitanzeige während der letzten 30 Sekunden eines Tracks</string>

    <string name="settings_dj_jogwheel_sensitivity_title">Jogwheel Empfindlichkeit</string>
    <string name="settings_dj_jogwheel_sensitivity_summary">Legt fest wie stark sich die Geschwindigkeit ändert\nAktuell: %1$s</string>

    <!-- Sound Settings -->
    <string name="settings_cat_sound_title">Sound Einstellungen</string>

    <string name="settings_equalizer_title">3-Band Equalizer</string>
    <string name="settings_equalizer_summary"></string>

    <!-- Common Settings -->
    <string name="settings_cat_common_title">Allgemeine Einstellungen</string>

    <string name="settings_start_foreground_title">Im Foreground-Service Modus starten?</string>
    <string name="settings_start_foreground_summary">Als Foreground-Service läuft der Player auch weiter wenn die App in den Hintergrund geht und die Doze-Funktion des Geräts sich einschaltet.\nNeustart der App erforderlich\nBeachte: Der Akku wird dann auch schneller geleert!</string>

    <string name="settings_privacy_crashreport_title">Absturzberichte</string>
    <string name="settings_privacy_crashreport_summary">Wenn aktiviert sendet die App Absturzberichte.\nDie App muss neu gestartet werden damit diese Einstellung wirksam wird.</string>

    <string name="settings_app_version_title">App Version</string>

    <string name="settings_device_info_title">Geräte Info</string>

    <!-- Feedback Activity -->
    <string name="feedback_activity_explanation">Um dein Feedback besser zu verstehen ist es für uns sehr nützlich wenn wir bestimmte Informationen zu deinem Gerät erhalten.\nDiese Daten lesen wir aus und du kannst sie uns zusammen mit deinem Feedback zuschicken.\nUnten kannst du sehen um welche Informationen es sich handelt.\nWenn du auf &quot;Mit Geräteinfos Senden&quot; tappst werden die Geräteinfos automatisch in die Nachricht eingefügt.\nWenn du die Geräteinfos nicht mitschicken möchtest dann tapp auf &quot;Ohne Geräteinfos Senden&quot;.</string>
    <string name="feedback_activity_device_info_title">Deine Geräteinformationen:</string>
    <string name="feedback_activity_send_button_with">Mit Geräteinfos senden</string>
    <string name="feedback_activity_send_button_without">Ohne Geräteinfos senden</string>

    <!-- PlayerService -->
    <string name="notification_channel_id" translatable="false">qplayer_notification_channel_01</string>
    <string name="notification_channel_name" translatable="false">qplayer control channel</string>
    <string name="notification_channel_description" translatable="false">qplayer notification controls</string>

    <!-- M3UUtils -->
    <string name="toast_track_not_found">Track aus Playlist wurde nicht gefunden: </string>

</resources>
