<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:title="@string/settings_cat_player_basic_title"
        android:key="player_basic_settings">
        
        <SwitchPreference
            android:key="@string/prefs_key_track_autostart"
            android:title="@string/settings_track_autostart_title"
            android:summary="@string/settings_track_autostart_summary"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="@string/prefs_key_autostart_next"
            android:title="@string/settings_track_next_auto_title"
            android:summary="@string/settings_track_next_auto_summary"
            android:defaultValue="true"/>

        <SwitchPreference
            android:key="@string/prefs_key_skip_back_to_start"
            android:title="@string/settings_skip_back_behaviour_title"
            android:summary="@string/settings_skip_back_behaviour_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="@string/prefs_key_show_clear_queue_dialog"
            android:title="@string/settings_show_clear_queue_title"
            android:summary="@string/settings_show_clear_queue_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_cat_dj_specific_options_title"
        android:key="dj_options_settings">
<!--
        <SwitchPreference
            android:key="PREFS_ENABLE_CUE"
            android:title="@string/settings_dj_enable_cue"
            android:summary="@string/settings_dj_enable_cue_summary"
            android:defaultValue="true" />
-->
        <SwitchPreference
            android:key="@string/prefs_key_stop_playback_on_cue"
            android:title="@string/settings_dj_stop_playback_on_cue_title"
            android:summary="@string/settings_dj_stop_playback_on_cue_summary"
            android:defaultValue="false"/>
<!--
        <SwitchPreference
            android:key="@string/prefs_key_enable_remain_blink"
            android:title="@string/settings_dj_enable_remain_blink_title"
            android:summary="@string/settings_dj_remain_blink_summary"
            android:defaultValue="true"/>
-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_cat_privacy_title"
        android:key="player_privacy_settings">

        <SwitchPreference
            android:key="@string/prefs_key_enable_crashreporting"
            android:title="@string/settings_privacy_crashreport_title"
            android:summary="@string/settings_privacy_crashreport_summary"
            android:defaultValue="false"/>

        <Preference
            android:key="@string/prefs_key_app_version"
            android:title="@string/settings_app_version_title"/>

    </PreferenceCategory>
    
</PreferenceScreen>