<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/more_menu_settings"
          android:title="@string/more_menu_settings"
          app:showAsAction="always"/>

    <item android:id="@+id/more_menu_privacy"
          android:title="@string/more_menu_privacy"
          app:showAsAction="always"/>

    <item android:id="@+id/more_menu_imprint"
          android:title="@string/more_menu_imprint"
          app:showAsAction="always"/>

    <item android:id="@+id/more_menu_contact"
          android:title="@string/more_menu_contact"
          app:showAsAction="always"/>

    <item android:id="@+id/more_menu_licenses"
          android:title="@string/more_menu_licenses"
          app:showAsAction="always"/>

</menu>